[gd_scene load_steps=2 format=3 uid="uid://d9k3l4m5n6o7p8q9"]

[ext_resource type="Script" path="res://scripts/TutorialOverlay.gd" id="1_tutorial"]

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_tutorial")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="TutorialPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TutorialPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="TutorialPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Welcome to Smart Home Demo"
horizontal_alignment = 1

[node name="StepCounter" type="Label" parent="TutorialPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "1/5"

[node name="HSeparator" type="HSeparator" parent="TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="StepTitle" type="Label" parent="TutorialPanel/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
text = "Step Title"

[node name="StepDescription" type="RichTextLabel" parent="TutorialPanel/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Step description goes here..."
fit_content = true
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="TutorialPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SkipButton" type="Button" parent="TutorialPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Skip Tutorial"

[node name="Spacer" type="Control" parent="TutorialPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrevButton" type="Button" parent="TutorialPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Previous"

[node name="NextButton" type="Button" parent="TutorialPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Next"

[node name="Highlight" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
